--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alber Turizm | Güvenli ve Zamanında Servis Hizmeti | Alber Turizm</title>
+  <title>Alber Turizm | Güvenli ve Zamanında Servis Hizmeti</title>
 
   <!-- SEO Meta -->
   <meta name="description" content="Alber Turizm olarak personel taşımacılığı hizmetinde güvenli, konforlu ve dakik ulaşım çözümleri sunuyoruz. Kurumsal servis taşımacılığında profesyonel ve kaliteli hizmet." />
-  <meta name="keywords" content="personel taşımacılığı, servis taşımacılığı, personel servisi, kurumsal servis, Alber Turizm, personel servisi fiyatları" />
+  <meta name="keywords" content="personel taşımacılığı, servis taşımacılığı, personel servisi, kurumsal servis, Alber Turizm" />
   <meta name="author" content="Alber Turizm" />
-
-  <!-- Canonical -->
   <link rel="canonical" href="https://alberturizm.tr/" />
 
-  <!-- Open Graph (Facebook & LinkedIn) -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Personel Taşımacılığı | Güvenli ve Zamanında Servis Hizmeti | Alber Turizm" />
-  <meta property="og:description" content="Kurumsal firmalara özel güvenli, konforlu ve dakik personel taşımacılığı hizmeti. Alber Turizm ile ulaşımda farkı yaşayın." />
+  <meta property="og:description" content="Kurumsal firmalara özel güvenli, konforlu ve dakik personel taşımacılığı hizmeti." />
   <meta property="og:image" content="https://alberturizm.tr/assets/images/resources/personel-tasimaciligi.webp" />
   <meta property="og:url" content="https://alberturizm.tr/" />
   <meta property="og:type" content="website" />
@@ -30,25 +28,296 @@
   <meta name="twitter:image" content="https://alberturizm.tr/assets/images/resources/personel-tasimaciligi.webp" />
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/alberFavicon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/alberFavicon.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/alberFavicon.png" />
-  <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
+  <link rel="icon" type="image/png" href="assets/images/favicons/alberFavicon.png" />
+  <link rel="apple-touch-icon" href="assets/images/favicons/alberFavicon.png" />
 
-<!-- Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-<noscript>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-</noscript>
+  <!-- DNS Prefetch -->
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+  
+  <!-- Preconnect -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link rel="preload" href="assets/css/bundle.all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="assets/css/bundle.all.min.css"></noscript>
+  <!-- ⚡ CRITICAL CSS - İlk ekran için inline -->
+  <style>
+    /* ========================================
+   CRITICAL CSS - İlk Ekran Yükleme
+   ======================================== */
 
-<link rel="preload" href="assets/css/menu-toggler.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="assets/css/menu-toggler.css"></noscript>
+/* Reset ve Base Styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+html {
+  scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+  background: #fff;
+  overflow-x: hidden;
+}
+
+/* Container */
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+/* Header & Navigation - Above the fold */
+.main-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background: #fff;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  transition: all 0.3s ease;
+}
+
+.main-header__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 0;
+}
+
+.main-header__logo {
+  flex-shrink: 0;
+}
+
+.main-header__logo img {
+  height: 50px;
+  width: auto;
+  display: block;
+}
+
+.main-menu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.main-menu > li {
+  margin: 0 15px;
+}
+
+.main-menu a {
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  transition: color 0.3s ease;
+  display: inline-block;
+  padding: 5px 0;
+}
+
+.main-menu a:hover {
+  color: #007bff;
+}
+
+/* Mobile Menu Toggle */
+.mobile-nav__toggler {
+  display: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.mobile-nav__toggler span {
+  display: block;
+  width: 30px;
+  height: 3px;
+  background: #333;
+  margin: 5px 0;
+  transition: all 0.3s ease;
+}
+
+/* Hero Section - Above the fold */
+.main-slider {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  min-height: 600px;
+  margin-top: 80px;
+  overflow: hidden;
+}
+
+.main-slider__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.main-slider__bg::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4);
+}
+
+.main-slider__content {
+  position: relative;
+  z-index: 2;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+}
+
+.main-slider__title {
+  font-size: 3.5rem;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 20px;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+}
+
+.main-slider__text {
+  font-size: 1.25rem;
+  margin-bottom: 30px;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Buttons */
+.thm-btn {
+  display: inline-block;
+  padding: 15px 35px;
+  background: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: 600;
+  transition: all 0.3s ease;
+  border: 2px solid #007bff;
+}
+
+.thm-btn:hover {
+  background: transparent;
+  color: #007bff;
+  border-color: #007bff;
+}
+
+/* Loading State */
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.preloader__image {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Responsive - Mobile First */
+@media (max-width: 991px) {
+  .mobile-nav__toggler {
+    display: block;
+  }
+  
+  .main-menu {
+    display: none;
+  }
+  
+  .main-slider__title {
+    font-size: 2.5rem;
+  }
+  
+  .main-slider__text {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .main-header__logo img {
+    height: 40px;
+  }
+  
+  .main-slider {
+    min-height: 500px;
+  }
+  
+  .main-slider__title {
+    font-size: 2rem;
+  }
+  
+  .thm-btn {
+    padding: 12px 25px;
+    font-size: 0.9rem;
+  }
+}
+
+/* Utility Classes */
+.text-center {
+  text-align: center;
+}
+
+.d-none {
+  display: none;
+}
+
+.d-block {
+  display: block;
+}
+  </style>
+  <link rel="stylesheet" href="assets/css/critical.css">
+
+  <!-- Preload Ana CSS - Hemen sonra yüklensin -->
+  <link rel="preload" href="assets/css/bundle.all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="assets/css/bundle.all.min.css"></noscript>
+  
+  <!-- Menu Toggler CSS -->
+  <link rel="preload" href="assets/css/menu-toggler.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="assets/css/menu-toggler.css"></noscript>
+
+  <!-- Fonts - Async yükleme -->
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  </noscript>
+
+  <!-- Fallback for old browsers -->
+  <script>
+    // LoadCSS polyfill
+    !function(e){"use strict";var t=function(t,n,r){var o,i=e.document,a=i.createElement("link");if(n)o=n;else{var l=(i.body||i.getElementsByTagName("head")[0]).childNodes;o=l[l.length-1]}var d=i.styleSheets;a.rel="stylesheet",a.href=t,a.media="only x",function e(t){if(i.body)return t();setTimeout(function(){e(t)})}(function(){o.parentNode.insertBefore(a,n?o:o.nextSibling)});var s=function(e){for(var t=a.href,n=d.length;n--;)if(d[n].href===t)return e();setTimeout(function(){s(e)})};return a.addEventListener&&a.addEventListener("load",function(){this.media=r||"all"}),a.onloadcssdefined=s,s(function(){a.media!==r&&(a.media=r)}),a};"undefined"!=typeof exports?exports.loadCSS=t:e.loadCSS=t}("undefined"!=typeof global?global:this);
+  </script>
 </head>
 
 
